--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,16 @@ h3 {
 	padding: 1rem;
 }
 
+h1 {
+	padding: 1rem 0;
+	font-size: 1.8rem;
+}
+
+h2 {
+	padding: 0.5rem 0;
+	font-size: 1.4rem;
+}
+
 .rating span {
 	margin: 0.1rem;
 }
